--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,15 @@
 *::after {
   box-sizing: border-box;
 }
+#content-desktop {display: block;}
+#content-mobile {display: none;}
 
+@media screen and (max-width: 768px) {
+
+#content-desktop {display: none;}
+#content-mobile {display: block;}
+
+}
 .icon-bar {
   position: fixed;
   top: 50%;
